--- a/echo-server/oauth2-values.yaml
+++ b/echo-server/oauth2-values.yaml
@@ -1,14 +1,30 @@
 # https://github.com/oauth2-proxy/oauth2-proxy/blob/7c3efe4f42bc37ccab613fe5002c172e147e3195/docs/2_auth.md#keycloak-auth-provider
 extraArgs:
-  - --provider=keycloak
-  - --set-xauthrequest=true
-  - --provider-display-name="Echo Login"
+  - --provider=keycloak-oidc
   - --client-id=nginx
-  - --client-secret="rivnAokYs0riGJkvXDkd9qniutQbIxJ7"
-  - --login-url=https://alpha.southeastasia.cloudapp.azure.com/auth/realms/camunda-platform/protocol/openid-connect/auth
-  - --redeem-url=https://alpha.southeastasia.cloudapp.azure.com/auth/realms/camunda-platform/protocol/openid-connect/token
-  - --validate-url=https://alpha.southeastasia.cloudapp.azure.com/auth/realms/camunda-platform/protocol/openid-connect/userinfo
-  - --keycloak-group=users
+  - --client-secret=fVwH9aEsO5rpoV5c6E5BSwga6tDObBAQ
+  - --redirect-url=https://monday.southeastasia.cloudapp.azure.com/oauth2/callback
+  - --oidc-issuer-url=https://monday.southeastasia.cloudapp.azure.com/auth/realms/camunda-platform
+  - --silence-ping-logging
+  - --auth-logging=true
+  # - --session-store-type=cookie
+  # - --cookie-secret=gfVLP_MPTXFi4JAXFUOOiikk5EXXgCOQsBUy3wCeNG4=
+  # - --login-url=https://monday.southeastasia.cloudapp.azure.com/auth/realms/camunda-platform/protocol/openid-connect/auth
+  # - --redeem-url=https://monday.southeastasia.cloudapp.azure.com/auth/realms/camunda-platform/protocol/openid-connect/token
+  # - --profile-url=https://monday.southeastasia.cloudapp.azure.com/auth/realms/camunda-platform/protocol/openid-connect/userinfo
+  # - --validate-url=https://monday.southeastasia.cloudapp.azure.com/auth/realms/camunda-platform/protocol/openid-connect/userinfo
+  # - --redirect-url=https://monday.southeastasia.cloudapp.azure.com/oauth2/callback
+  # - --keycloak-group=/users
+  # - --request-logging=true
+  # - --standard-logging=true
+  # - --provider-display-name=LoginBlah
+  # - --set-xauthrequest=true
+  # - --pass-user-headers=true
+  # - --pass-access-token=true
+  # - --pass-authorization-header=true
+  # # - --scope=openid
+  # - --cookie-httponly=false
+
 
 replicaCount: 1
 affinity:
